add button to change view from start to game

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,10 @@ body {
   flex-direction: column;
 }
 
+.start-view {
+  background-color: red;
+}
+
 .guess-counter {
   position: absolute;
   top: 5%;
