--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,16 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: 'Gaegu', cursive;
 }
 
 .game-wrapper {
   height: 80vh;
   width: 50vw;
+  background-color: rgb(178, 197, 250);
 
-  border: 2px solid black;
+  border: 5px solid rgb(203, 243, 210);
+  border-radius: 0.5rem;
 
   position: relative;
 
@@ -21,11 +24,11 @@ body {
 }
 
 .start-view {
-  background-color: red;
+  background-color: rgb(178, 197, 250);
 }
 
 .over-view {
-  background-color: red;
+  background-color: rgb(178, 197, 250);
 }
 
 .guess-counter {
@@ -33,3 +36,27 @@ body {
   top: 5%;
   left: 5%;
 }
+
+span {
+  padding: 1rem;
+}
+
+input {
+  font-family: 'Gaegu', bold;
+
+}
+
+/* //Buttons  */
+.all-buttons {
+  border: 0.1rem solid black;
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 2rem;
+  font-family: 'Gaegu', bold;
+
+}
+
+button:hover {
+  transform: scale(1.2) perspective(1px)
+}
+
