--- a/src/style.css
+++ b/src/style.css
@@ -43,16 +43,24 @@ body {
 }
 
 .nameInput {
-  position: absolute;
-  top: 20%;
-  left: 30%;
-  border: none;
-  padding: 10px 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  top: 96%;
+  right: 3%;
 }
 
 .name {
-  position: absolute;
-  top: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gameInstructions {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  
 }
 /* Test för opponent och textbox */
 
