--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,11 @@ body {
 }
 
 .opponent {
+  width: 100;
+  height: 100;
+  border-radius: 50%;
+  background-color: red;
+
   display: flex;
   align-items: center;
   justify-content: center;
