--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
 
 .game-wrapper {
   height: 100vh;
-  width: 50vw;
+  width: 60vw;
   background-color: rgb(178, 197, 250);
 
   border: 5px solid rgb(203, 243, 210);
@@ -73,16 +73,20 @@ body {
 .opponent {
   width: 100;
   height: 100;
-  border-radius: 50%;
-  background-color: red;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   margin-right: 1rem;
   padding: 1rem;
 }
+
+.opponent-image {
+  height: 100px;
+  width: auto;
+} 
 
 .textBox {
   display: flex;
